# jdip19.github.io

./: README.md  about.html  index.html  package-lock.json  package.json  resources.html  support-jdip.html  tailwind.config.js  tailwind.config.ts  tsconfig.json
.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/types/: routes.d.ts  validator.ts
Master Assets/JS/: masterjs.js
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
components/: CTA.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ProductCard.tsx  Products.tsx  Why.tsx  data.ts
css/: flaticon.html  styles.css
data/: changelog.ts
js/: main.js  plugins.js
next-js/: package-lock.json  package.json
next-js/public/: support-jdip.html
pages/: changelog.tsx  index.tsx  payment-cancelled.tsx  payment-success.tsx  payment.tsx
projects/BatchFiles/: IamDoing.bat  Orgfiles.ps1  (+4 more)
projects/Helpers/quiczip/: CMakeLists.txt  quiczip.iss
projects/Helpers/quiczip/include/: file_selection.h
projects/Helpers/quiczip/resources/: app.rc
projects/Helpers/quiczip/src/: file_selection.cpp  quiczip.cpp
public/: resources.html
styles/: globals.css
(+646 files in other folders)
